# DecibelDetect

./: .gitignore  App.tsx  README.md  app.config.js  app.js  backend.py  data.db  package-lock.json  package.json  pyproject.toml  requirements.txt
Backend/: App.tsx  app.config.js  backend.py  database.py  querydb.py  recordings.db  requirements.txt  test.py
Backend/website/: index.html
Frontend/: package.json
Frontend/public/: index.html
Frontend/src/: App.css  App.js  index.css  index.js
Frontend/src/Components/Heatmap/: Heatmap.css  Heatmap.jsx
Frontend/src/Components/HomePage/: HomePage.css  HomePage.jsx
Frontend/src/Components/HomePageLayout/: HomePageLayout.css  HomePageLayout.js
Frontend/src/Components/LoginForm/: LoginForm.css  LoginForm.jsx
Frontend/src/Components/Profile/: Profile.css  Profile.jsx
Frontend/src/Components/Upload/: NoiseAlert.css  NoiseAlert.jsx  Upload.jsx
audiotesting/: tempCodeRunnerFile.js
docs/: "Report Noise Source" Feature Design - Rahul  "Report Noise Source" Feature Design LOGS - Rahul  "Report Noise Source" Feature Design LOGS - Rahul.md  Architecture and Design  Architecture and Design.md
docs/requirements/: requirements.md
docs/software_architecture_and_design/: SW_Architecture&Design.md
docs/weeklyreports/: weekly_102.md  weekly_1023.md  weekly_1030.md  weekly_109.md  weekly_124.md  weekly_918.md  weekly_925.md
requirements/: requirements.md
src/components/: DecibelRecorderApp.js  audiotest.js
website/: index.html
weeklyreports/: 9.18 report  weekly_918.md  weekly_925.md
